# VCPP

./: .gitignore  CMakeLists.txt  EXCommandCase  EXCommandString  README.md  temp
Interpreter/: CMakeLists.txt  Interpreter.cpp  README.md  cpltree.cpp  gloconst.cpp  gloconst.h  idenstring.cpp  idensystem.bak  idensystem.cpp  note.txt  pbuilder.cpp  pbuilder.h  pretreat.cpp  pretreat.h  vasm.cpp  vasm.h  vasmbuilder.cpp  vcppcpl.cpp  vcppcpl.h
Runtime/: CMakeLists.txt  bignumber.c  gloconst.c  gloconst.h  hashmap.c  hashmap.h  list.c  list.h  main.c  syscall.c  syscall.h  vm.c  vm.h  vmobj.c  vmobj.h
TestEnv/: console.vasm  console.vc  console.vlib  console.vo  input.in  list.vasm  list.vc  list.vlib  list.vo  main.vc  math.vasm  math.vc  math.vlib  math.vo  rules.ninja  speedtest.vc  test-class.vasm  test-class.vc  test-class.vlib  test-class.vo  test.in  test.vasm  test.vc  test.vexe  test.vo  test3.vc
Tools/: EnumToString.py  EnumToSwitchCase.py
